<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcomeLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:background="@drawable/corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/merhaba_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="50dp"
                android:text="@string/merhaba"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kullanici_adi_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginBottom="55dp"
                android:text="İsminiz"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/harcamaniz_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="36dp"
                android:text="Toplam Harcamanız"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cinsiyet_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="55dp"
                android:text="Bey"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kullanici_adi_tv" />

            <TextView
                android:id="@+id/harcama_miktari_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="55dp"
                android:text="1000"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/birim_tv" />

            <TextView
                android:id="@+id/birim_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="55dp"
                android:text="TL"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <RadioGroup
            android:id="@+id/toggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeLayout">

            <RadioButton
                android:id="@+id/btnTL"
                android:checked="true"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tl"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@color/primary"
                android:padding="16dp"
                android:gravity="center"
                android:layout_margin="2dp"
                android:elevation="4dp"
                app:layout_constraintEnd_toStartOf="@+id/btnDollar"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                />

            <RadioButton
                android:id="@+id/btnDollar"
                android:background="@drawable/radio_selector"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/dolar"
                android:textColor="@color/primary"
                android:gravity="center"
                android:padding="16dp"
                android:layout_margin="2dp"
                android:elevation="4dp"
                android:button="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/btnEuro"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnTL"
                app:layout_constraintTop_toBottomOf="@+id/welcomeLayout" />

            <RadioButton
                android:id="@+id/btnEuro"
                android:background="@drawable/radio_selector"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:gravity="center"
                android:padding="16dp"
                android:elevation="4dp"
                android:layout_margin="2dp"
                android:textColor="@color/primary"
                android:button="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/btnSterlin"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnDollar"
                app:layout_constraintTop_toBottomOf="@+id/welcomeLayout" />

            <RadioButton
                android:id="@+id/btnSterlin"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/primary"
                android:background="@drawable/radio_selector"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/sterlin"
                android:elevation="4dp"
                android:layout_margin="2dp"
                android:button="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnEuro"
                app:layout_constraintTop_toBottomOf="@+id/welcomeLayout" />
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />

        <Button
            android:id="@+id/btnEkle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="+   Ekle"
            android:background="@drawable/button"
            android:backgroundTint="#f9d423"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             />




    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>